--- a/apps/recipes-web/styles/accordion.css
+++ b/apps/recipes-web/styles/accordion.css
@@ -1,7 +1,7 @@
-@import "tailwind-imports.css";
+.c-sZufP:focus-visible {
+  outline: none !important;
+}
 
-.c-sZufP:focus-visible,
 .c-sZufP:focus-within {
-  box-shadow: none;
-  outline: none;
+  box-shadow: none !important;
 }
