--- a/apps/recipes-web/styles/globals.css
+++ b/apps/recipes-web/styles/globals.css
@@ -3,7 +3,7 @@
 @import "accordion.css";
 @import "button.css";
 @import "modal.css";
-@import "nav.css";
+@import "layout.css";
 @import "scrollbar.css";
 @import "theme-toggle.css";
 
