Enforce types and general cleanup

--- a/apps/recipes-guest/styles/globals.css
+++ b/apps/recipes-guest/styles/globals.css
@@ -2,8 +2,8 @@
 
 @import "accordion.css";
 @import "button.css";
+@import "layout.css";
 @import "modal.css";
-@import "nav.css";
 @import "scrollbar.css";
 @import "theme-toggle.css";
 
